client/src/components/CSS/productList.css
/* product list css */

.productsContainer {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
    gap: 20px;
    margin: 0 auto;
    margin-top: 100px;
    margin-bottom: 30px;
    max-width: 80vw;
    box-sizing: border-box;
    padding: 0 20px;
}

.productCard {
  background-color: white;
  color: #000;
  border-radius: 12px;
  box-shadow: 0 2px 8px rgba(0,0,0,0.5);
  padding: 12px;
  text-align: center;
  transition: transform 0.2s ease, box-shadow 0.2s ease;
  max-width: 100%;
}

.productCard:hover {
  transform: translateY(-5px);
  box-shadow: 0 8px 16px rgba(0,0,0,0.1); 
}

.productCard img {
  width: 100%;
  height: auto;
  max-height: 180px;
  object-fit: cover;
  border-radius: 8px;
  margin: 6px 0;
  border: 2px solid #000;
}

.productCard h3 {
  font-size: 18px;
  font-weight: 600;
  margin: 4px 0;
  color: #000;
  line-height: 1.3;
}

.productActions {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  margin-top: 4px;
  gap: 4px;
}

#productAvailableTxt, #productNotAvailableTxt {
  padding: 4px 10px;
  border-radius: 20px;
  font-size: 14px;
  font-weight: 500;
  margin: 0;
  min-width: fit-content;
  text-align: center;
  color: white;
  line-height: 1;
}

#productAvailableTxt {
  background-color: #A5D6A7;
  color: #1B5E20;
}

#productNotAvailableTxt {
  background-color: #E53935;
  color: #B71C1C;
}

.seeDetailsBtn {
  background-color: #1976D2;
  color: white;
  border: none;
  width: 110px;
  margin-top: 16px;
  padding: 8px 14px;
  border-radius: 6px;
  cursor: pointer;
  transition: background-color 0.2 ease;
}

.seeDetailsBtn:hover {
  background-color: #1565c0;
}

.pageWrapper{
  background-color: #f0f0f0;
  padding: 40px clamp(16px, 5vw 40px);
  max-width: 100%;
  margin: 20px auto 0 auto;
  min-height: 100vh;
  display: flex;
  box-sizing: border-box;
  display: block;
}
  
.productBtns {
  display: flex;
  flex-direction: column;
  margin-top: 20px;
}


#productAvailableTxt, #productNotAvailableTxt, #productLowStockTxt {
  padding: 4px 10px;
  border-radius: 20px;
  font-size: 14px;
  font-weight: 500;
  margin: 0;
  min-width: fit-content;
  text-align: center;
  color: white;
  line-height: 1;
}

#productAvailableTxt {
  background-color: #A5D6A7;
  color: #1B5E20;
}

#productNotAvailableTxt {
  background-color: #E53935;
  color: #B71C1C;
}

#productLowStockTxt {
  background-color: #FFEB3B;
  color: #795548;
}

